name:                MRK
version:             0.0.0.0
synopsis:            A file format for marking student work
description:         Please see README.org
homepage:            https://github.com/oleks/MRK#readme
license:             BSD3
license-file:        LICENSE
author:              Oleks
maintainer:          oleks@oleks.info
copyright:           2017 Oleks
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable MRK-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MRK
                     , GenericPretty >= 1.2.1
  default-language:    Haskell2010

test-suite MRK-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Tests.hs
  other-modules:       Ast
                     , Parser
                     , Parser.BlackBoxTests
                     , Parser.Impl
  build-depends:       base
                     , MRK
                     , GenericPretty >= 1.2.1
                     , tasty >= 0.11.0.4
                     , tasty-golden >= 2.3.1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oleks/MRK
