name:                remarks
version:             0.1.16
synopsis:            A DSL for marking student work
description:         A DSL for marking student work; see README.md for further details.
homepage:            https://github.com/DIKU-EDU/remarks#readme
license:             BSD3
license-file:        LICENSE
author:              Oleks Shturmov <oleks@oleks.info>, Michael Kirkedal Thomsen <kirkedal@acm.org>
maintainer:          oleks@oleks.info
copyright:           2017 DIKU
category:            Web
build-type:          Simple
extra-source-files:  README.md, test/golden/*.mrk, test/golden/*.ref
cabal-version:       1.12
tested-with:   GHC == 9.0.2, GHC == 9.2.4,  GHC == 9.4.4, GHC == 9.6.3,
               GHC == 9.8.1, GHC == 9.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Ast
                     , Config
                     , Export
                     , Export.CSV
                     , Export.Feedback
                     , Export.Generic
                     , Export.Html
                     , Export.HtmlTable
                     , Export.MD
                     , Export.PdfMark
                     , Export.ResultsTable
                     , Export.SimpleTable
                     , Invalid
                     , MergeAsts
                     , Parser
                     , Parser.ImplParsec
                     , Pending
                     , PointsChecker
                     , PrettyPrinter
                     , PropertyInterp
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , GenericPretty >= 1.2.2
                     , regex-posix >= 0.96.0.0
                     , pretty >= 1.1.3.3
                     , containers >= 0.5.7.1
                     , parsec >= 3.1.11
                     , mtl >= 2.2.1
  default-language:    Haskell2010

executable remarks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , remarks
                     , GenericPretty >= 1.2.2
                     , directory >= 1.2.6.2
                     , filepath >= 1.4.1.0
  default-language:    Haskell2010

test-suite remarks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:       Parser.BlackBoxTests
                       PointsCheckerTests
  build-depends:       base >= 4.7 && < 5
                     , remarks
                     , GenericPretty >= 1.2.1
                     , tasty >= 0.11.0.4
                     , tasty-hunit >= 0.9.2
                     , tasty-golden >= 2.3.1.1
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DIKU-EDU/remarks
